# screenshot

./: .gitignore  .mcp.json  .swiftformat  .swiftlint.yml  .vercelignore  CLAUDE.md  DEVELOPMENT_NOTES.md  FEATURES.md  RECORDING_OVERHAUL_SPEC.md  conductor.json  vercel.ts
.github/workflows/: ci.yml  docs.yml
ScreenCapture.xcodeproj/: project.pbxproj
ScreenCapture/App/: AppDelegate.swift  MenuBarController.swift  ScreenCaptureApp.swift
ScreenCapture/Core/: AVAssetWriterCaptureEngine.swift  CaptureEngine.swift  DebugLogger.swift  GIFEncoder.swift  GIFExportService.swift  KeyboardShortcuts.swift  (+10 more)
ScreenCaptureIntegrationTests/: StorageIntegrationTests.swift
ScreenCaptureUITests/: ScreenCaptureUITests.swift
Tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
Tauri/src-tauri/capabilities/: default.json
Tauri/src-tauri/icons/: icon.icns
Tauri/src-tauri/src/: error.rs  events.rs  lib.rs  main.rs
Tauri/src-tauri/src/capture/: commands.rs  config.rs  content_provider.rs  mod.rs  recording.rs  screenshot.rs
Tauri/src-tauri/src/services/: mod.rs
Tauri/src-tauri/src/services/ocr/: commands.rs
Tauri/src-tauri/src/services/permissions/: commands.rs
Tauri/src-tauri/src/services/storage/: commands.rs  manager.rs
Tauri/src-tauri/src/shortcuts/: commands.rs
Tauri/src-tauri/src/state/: app_state.rs
Tauri/src-tauri/src/tray/: menu.rs
docs/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
scripts/: build-and-test.sh  setup.sh
(+635 files in other folders)
